--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "bin": {
     "lighthouse": "./bin/index.js"
   },
+  "files": ["bin"],
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
     "@types/node": "^17.0.42",
